--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.6",
     "firebase": "^9.11.0",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
     "react-alert-template-oldschool-dark": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-alert": "^7.0.2",
     "@types/uuid": "^8.3.4",
     "sass": "^1.55.0"
   }
