--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-alert": "^7.0.3",
     "react-alert-template-oldschool-dark": "^1.0.1",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
