--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@types/node": "^16.11.64",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "dotenv": "^16.0.3",
     "emoji-picker-react": "^4.3.0",
+    "env-cmd": "^10.1.0",
     "firebase": "^9.11.0",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
     "react-alert-template-oldschool-dark": "^1.0.1",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.4.2",
@@ -31,7 +34,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:dev": "env-cmd -f dev.env npm start", 
+    "build:beta": "env-cmd -f stag.env npm run build"
   },
   "eslintConfig": {
     "extends": [
