--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blaumaus/react-alert": "^7.0.5",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -19,7 +20,6 @@
     "env-cmd": "^10.1.0",
     "firebase": "^9.11.0",
     "react": "^18.2.0",
-    "react-alert": "^7.0.3",
     "react-alert-template-oldschool-dark": "^1.0.1",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
@@ -35,7 +35,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start:dev": "env-cmd -f dev.env npm start", 
+    "start:dev": "env-cmd -f dev.env npm start",
     "build:beta": "env-cmd -f stag.env npm run build"
   },
   "eslintConfig": {
