--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,10 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install dependencies
-      run: npm ci
+      run: npm i
 
     - name: Build the React app
-      run: npm run build
+      run: CI=false npm run build
 
     - name: Install Firebase CLI
       run: npm install -g firebase-tools
