--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       run: npm install -g firebase-tools
       
     - name: Login to Firebase
-      run: firebase login:ci --token ${{ env.FIREBASE_TOKEN }}
+      run: firebase login:ci --interactive --token ${{ env.FIREBASE_TOKEN }}
 
     - name: Deploy the app
       run: firebase deploy --only hosting 
